# my_app

./: .gitignore  CMakeLists.txt  README.md
my_add_lib/: CMakeLists.txt
my_add_lib/host/: my_add_lib_ca.c
my_add_lib/libs/algo/: Makefile  add.c  sub.c
my_add_lib/libs/algo/include/: algo.h
my_add_lib/ta/: Makefile  my_add_lib_ta.c  sub.mk  user_ta_header_defines.h
my_add_lib/ta/include/: my_add_lib_ta.h
my_aes/: CMakeLists.txt
my_aes/host/: my_aes_ca.c
my_aes/ta/: Makefile  my_aes_ta.c  sub.mk  user_ta_header_defines.h
my_aes/ta/include/: my_aes_ta.h
my_digest/: CMakeLists.txt
my_digest/host/: my_digest_ca.c
my_digest/log/: ca.txt  ta.txt
my_digest/ta/: Makefile  my_digest_ta.c  sub.mk  user_ta_header_defines.h
my_digest/ta/include/: my_digest_ta.h
my_random/: CMakeLists.txt
my_random/host/: my_random_ca.c
my_random/ta/: Makefile  my_random_ta.c  sub.mk  user_ta_header_defines.h
my_random/ta/include/: my_random_ta.h
my_sec_store/: CMakeLists.txt
my_sec_store/host/: my_sec_store_ca.c
my_sec_store/ta/: Makefile  my_sec_store_ta.c  sub.mk  user_ta_header_defines.h
my_sec_store/ta/include/: my_sec_store_ta.h
my_test/: CMakeLists.txt
my_test/host/: my_test_ca.c
my_test/ta/: Makefile  my_test_ta.c  sub.mk  user_ta_header_defines.h
my_test/ta/include/: my_test_ta.h
